--- a/Proyecto Integrador/index.html
+++ b/Proyecto Integrador/index.html
@@ -23,7 +23,7 @@
 					<li><input type="text" name="" style="margin: 10px; display: block;">
 					<li><a href="index.html">   Inicio   </a></li>
 					<li><a href="#">   Temas</a></li>
-					<li><a href="indexEn.html">   Idioma: Inglés   </a></li>
+					<li><a href="indexEn.html">   En Inglés  </a></li>
 					<li><a href="#">   Perfil   </a></li>
 				</ul>
 				</nav>
@@ -41,9 +41,9 @@
 						¿Te interesa la fisica?, ¿No entiendes algun tema?, ¿Quieres aprender por tu cuenta?<br>
 						Aqui en <b>Programmed Physics</b> podemos ayudarte. Mira nuestros contenidos sobre:<br>
 						<br>
-								<b>-</b><a href="#">Modelo de Hooke</a><br>
-								<b>-</b><a href="#">Principio de Pascal</a><br>
-								<b>-</b><a href="#">Modelo de Torricelli</a><br>
+								<b>-</b><a href="#" style="color: #9b8fbe;">Modelo de Hooke</a><br>
+								<b>-</b><a href="#" style="color: #9b8fbe;">Principio de Pascal</a><br>
+								<b>-</b><a href="#" style="color: #9b8fbe;">Modelo de Torricelli</a><br>
 					</p>
 				</div>
 				<div class="contenedor-thumbnail">
@@ -136,9 +136,26 @@
 				</nav>
 			</aside>
 
-			<footer class="footer" id="">
-				<p>Proyecto Integrador de las materias de :<br>
-				Inglés,prof. Antonio Saldívar Fisica, Aplicaciones Web</p>
+			<footer class="footer">
+				
+				<p style="font-weight: bold;">CBTIS 168<br>
+					Programación, 5°L</p><br>
+				<p style="font-weight: lighter;float: left; text-align: left;"><b>Proyecto Integrador de las materias de :</b><br><br>
+					<b> - </b>Ingles V<b>,</b> Dr. José Antonio Saldivar Cervantes<br>
+					<b> - </b>Fisica II<b>,</b> Dr. Octavio Hernández Castorena<br>
+					<b> - </b>Aplicaciones web con BD<b>,</b> M.C. Manuel López Chávez<br>
+				</p>
+				<p></p>
+				<p style="font-weight: lighter;float: right; text-align: left;"><b>Programmed Physics realizado por :</b><br><br>
+					<b> - </b>NL 13<b>,</b> Estrada Marmolejo Leonardo<br>
+					<b> - </b>NL 17<b>,</b> Gallegos Rangel Julio Alberto<br>
+					<b> - </b>NL 18<b>,</b> Gomaez Valdes Diego Enrique<br>
+					<b> - </b>NL<b>,</b> Flores Martinez Leonardo Israel<br>
+					<b> - </b>NL 30<b>,</b> Mora Castañeda Luis Enrique<br>
+					<br><br>
+				</p>
+				
+			
 			</footer>
 		</div>
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
