--- a/Proyecto Integrador/Hooke.html
+++ b/Proyecto Integrador/Hooke.html
@@ -23,7 +23,7 @@
 					<li><input type="text" name="" style="margin: 10px; display: block;">
 					<li><a href="index.php">   Inicio   </a></li>
 					<li><a href="#">   Temas</a></li>
-					<li><a href="Hooke">   Idioma: Inglés   </a></li>
+					<li><a href="Hooke.html">   Idioma: Inglés   </a></li>
 					<li><a href="#">   Perfil   </a></li>
 				</ul>
 				</nav>
