--- a/Proyecto Integrador/Hooke.html
+++ b/Proyecto Integrador/Hooke.html
@@ -23,7 +23,7 @@
 					<li><input type="text" name="" style="margin: 10px; display: block;">
 					<li><a href="index.php">   Inicio   </a></li>
 					<li><a href="#">   Temas</a></li>
-					<li><a href="Hooke.html">   Idioma: Inglés   </a></li>
+					<li><a href="HookeEn.html">   Idioma: Inglés   </a></li>
 					<li><a href="#">   Perfil   </a></li>
 				</ul>
 				</nav>
@@ -129,7 +129,8 @@
 							Sustituyendo nuestros datos en la fórmula, tenemos:<br>
 							Resultado:
 						</p>
-						<a class="formulas"><img src="./img/Problema6.jpg" alt="" style="width: 670px; height: 125px; margin-left: 20px;"></a><br>
+						<a class="formulas"><img src="./img/Problema6.jpg" alt="" style="width: 670px; height: 125px; margin-left: 20px;"></a><br><br><br>
+						
 					</div>
 				</article>
 
@@ -150,6 +151,7 @@
 					<a href="Hooke.html">Modelo de Hooke</a>
 					<a href="#">Principio de Pascal</a>
 					<a href="#">Torricelli</a>
+					<a href="https://phet.colorado.edu/sims/html/hookes-law/latest/hookes-law_es.html" target="_blank" style="font-size: 28px;"> >> Da clic para acceder a un simulador << </a>
 				</nav>
 			</aside>
 
