--- a/Proyecto Integrador/HookeEn.html
+++ b/Proyecto Integrador/HookeEn.html
@@ -38,7 +38,8 @@
 						</p> 
 					</div>
 					<p class="extracto" style="text-align:justify;">
-						Hooke's Law of elasticity, or simply Hooke's Law, is the physical principle around the elastic behavior of solids. It was formulated in 1660 by the British scientist Robert Hooke, a contemporary of the famous Isaac Newton. The theoretical precept of this law is that the displacement or deformation suffered by an object subjected to a force will be directly proportional to the deformation force or the load. That is to say, the greater the force, the greater the deformation or displacement, or as Hooke himself formulated it in Latin: Ut tensio sic vis (“as the extension, thus the force”).  
+						Hooke's Law of elasticity, or simply Hooke's Law, is the physical principle around the elastic behavior of solids. It was formulated in 1660 by the British scientist Robert Hooke, a contemporary of the famous Isaac Newton.<br>
+						The theoretical precept of this law is that the displacement or deformation suffered by an object subjected to a force will be directly proportional to the deformation force or the load. That is to say, the greater the force, the greater the deformation or displacement, or as Hooke himself formulated it in Latin: Ut tensio sic vis (“as the extension, thus the force”).  
 						<br>
 					</p>
 				</div>
@@ -148,6 +149,7 @@
 					<a href="#">Hooke's model </a>
 					<a href="#"> Pascal's Principle </a>
 					<a href="#"> Torricelli </a>
+					<a href="https://phet.colorado.edu/sims/html/hookes-law/latest/hookes-law_es.html" target="_blank" style="font-size: 28px;"> >>Clic Here to access a Simulator << </a>
 				</nav>
 			</aside>
 
