--- a/Proyecto Integrador/Hooke.html
+++ b/Proyecto Integrador/Hooke.html
@@ -20,10 +20,10 @@
 				<nav class="menu">
 					
 				<ul>
-					<li><input type="text" name="" style="margin: 10px; display: block;">
+					
 					<li><a href="index.php">   Inicio   </a></li>
 					<li><a href="#">   Temas</a></li>
-					<li><a href="HookeEn.html">   Idioma: Inglés   </a></li>
+					<li><a href="HookeEn.html">  Cambiar a: Inglés   </a></li>
 					<li><a href="#">   Perfil   </a></li>
 				</ul>
 				</nav>
@@ -149,7 +149,7 @@
 				</div>
 				<nav class="menu">
 					<a href="Hooke.html">Modelo de Hooke</a>
-					<a href="#">Principio de Pascal</a>
+					<a href="Pascal.html">Principio de Pascal</a>
 					<a href="#">Torricelli</a>
 					<a href="https://phet.colorado.edu/sims/html/hookes-law/latest/hookes-law_es.html" target="_blank" style="font-size: 28px;"> >> Da clic para acceder a un simulador << </a>
 				</nav>
