--- a/Proyecto Integrador/HookeEn.html
+++ b/Proyecto Integrador/HookeEn.html
@@ -20,9 +20,9 @@
 				<nav class="menu">
 					
 				<ul>
-					<li><input type="text" name="" style="margin: 10px; display: block;">
+					
 					<li><a href="indexEn.php">   Home   </a></li>
-					<li><a href="#">   Topic </a></li>
+					<li><a href="#">   Topics </a></li>
 					<li><a href="Hooke.html">   Language: English   </a></li>
 					<li><a href="#">   Profile   </a></li>
 				</ul>
@@ -146,8 +146,8 @@
 					</div>
 				</div>
 				<nav class="menu">
-					<a href="#">Hooke's model </a>
-					<a href="#"> Pascal's Principle </a>
+					<a href="HookeEn.html">Hooke's model </a>
+					<a href="PascalEn.html"> Pascal's Principle </a>
 					<a href="#"> Torricelli </a>
 					<a href="https://phet.colorado.edu/sims/html/hookes-law/latest/hookes-law_es.html" target="_blank" style="font-size: 28px;"> >>Clic Here to access a Simulator << </a>
 				</nav>
